Footer hr spacing fix

--- a/styles/main.css
+++ b/styles/main.css
@@ -85,12 +85,17 @@ p {
 
 hr {
 	color: #676767;
+	width: auto;
 }
 
 footer {
     background-color: white !important;
 	box-shadow: 0 -5px 5px 0 rgba(76, 82, 103, 0.1);
 }
+
+	footer hr {
+		padding: 0;
+	}
 
 .underline::after, .underline-blue::after {
 	border-left: 68px solid white;
